hphp/hack/test/typecheck/explicit_type_collection/explicit_type_collection_mismatch3.php.exp
File "explicit_type_collection_mismatch3.php", line 4, characters 8-58:
The values of this Map are incompatible (Typing[4110])
File "explicit_type_collection_mismatch3.php", line 4, characters 21-23:
This is an int
File "explicit_type_collection_mismatch3.php", line 4, characters 33-35:
It is incompatible with a string
